--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <meta name = "robots" content = "index, follow" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= disqus_init :reset => true %>
+    <%= disqus_init %>
     <%= csrf_meta_tags %>
   </head>
 
