--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,6 @@
     </div>
   </div>
   <h2>Comentários</h2>
-  <%- disqus_thread @post.id.to_s, @post.title %>
+  <% binding.pry %>
+  <%- disqus_thread @post.id, @post.title %>
 </section>
