Added "about" bar above footer

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -90,6 +90,12 @@ footer {
   text-align: center;
 }
 
+#footer-above {
+  height: 70px;
+  background-color: #5038fc;
+  margin-bottom: 0;
+}
+
 #social-icons ul {
   list-style-type: none;
   text-align: center;
