--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -34,4 +34,8 @@
       </div>
     </section>
   </div>
+
 </footer>
+<div id="footer-above" class="row">
+  <div class="col-md-12 col-xs-12 col-lg-12"></div>
+</div>
