Sign in "Forgot your password?" button changed

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -195,3 +195,9 @@ ul li {
 #dsq-content {
   color: white !important;
 }
+
+.btn-default, .btn-default:hover, .btn-default:visited, .btn-default:active{
+  color: #fff;
+  border-style: none;
+  background-color: inherit;
+}
